--- a/to_do/templates/to_do/task_form.html
+++ b/to_do/templates/to_do/task_form.html
@@ -2,15 +2,17 @@
 {% block content %}
 
 <div class="header-bar" >
-    <a href="{% url 'tasks' %}">&#8592; Назад</a>
-    <h2 style="margin-top: 20px; margin-right: 190px; ">Новая задача</h2>
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+    <h2 style="margin:auto">New task</h2>
 </div>
 
 <div class="card-body">
 <form method="POST" action="">
     {% csrf_token %}
     {{form.as_p}}
-    <input class="button" type="submit" value="Создать">
+    <div class="button">
+        <input class="button" type="submit" value="Create" >
+    </div>
 </form>
 </div>
 
