--- a/to_do/static/css/to_do.css
+++ b/to_do/static/css/to_do.css
@@ -1,126 +1,127 @@
 body {
-       background-color: #FAFAFA;
-       font-family: 'Oswald', sans-serif;
-       padding-top: 50px;
-        }
-
-h1, h2, h3, h4, h5, h6 {
-            font-family: 'Anton', sans-serif;}
-a, p {
-        color: #4b5156
-}
-
-.container{
-           max-width: 550px;
-           margin: auto;
-           background-color: #fff;
-           -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
-           box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
-
-        }
-
-.header-bar {
-            display: flex;
-            justify-content: space-between;
-            color: #fff;
-            padding: 10px;
-            border-radius: 5px 5px 0 0;
-            background: linear-gradient(90deg, rgba(14,0,255,1) 0%, rgba(5,0,255,1) 35%, rgba(7,4,219,1) 100%);
-
-}
-
-.header-bar a {
-            color: rgb(255, 255, 255);
-            text-decoration: none;
-}
-
-.task-wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px;
+        background-color: #FAFAFA;
+        font-family: 'Oswald', sans-serif;
+        padding-top: 50px;
+        background-color: #a5a5a5;
+       
+         }
+ 
+ h1, h2, h3, h4, h5, h6 {
+             font-family: 'Anton', sans-serif;
+             
+         
+         }
+             
+ a, p {
+         color: #4b5156
+ }
+ 
+ .container{
+            max-width: 1980px;
+            margin: auto;
             background-color: #fff;
-            border-top: 1px solid rgb(226, 226, 226);
+            -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+            box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
+            font-size: 20px;
+ 
+         }
+ 
+ .header-bar {
+             display: flex;
+             justify-content: space-between;
+             color: rgb(255, 255, 255);
+             padding: 10px;
+             background:rgb(43, 43, 43);
+ 
+ }
+ 
+ .button {
+         background-color: rgb(43, 43, 43); 
+         border: none;
+         border-radius: 4px;
+         color: white;
+         padding: 10px 10px;
+         text-align: center;
+         text-decoration: none;
+         display: inline-block;
+         font-size: 16px;
+     }
+ 
+ .header-bar a {
+             color: rgb(255, 255, 255);
+             text-decoration: none;
+ }
+ 
+ .task-wrapper {
+             display: flex;
+             align-items: center;
+             justify-content: space-between;
+             padding: 20px;
+             background-color: #fff;
+             border-top: 1px solid rgb(226, 226, 226);
+ 
+ 
+ }
+ 
+ .task-title{
+ 
+             display: flex;
+ 
+ }
+ 
+ 
+ 
+ .task-title a {
+             text-decoration: none;
+             color: #4b5156;
+             margin-left: 10px;
+ }
 
-
-}
-
-.task-title{
-
-            display: flex;
-
-}
-
-.task-title a {
-            text-decoration: none;
-            color: #4b5156;
-            margin-left: 10px;
-}
-.task-complete-icon {
-
-            height: 20px;
-            width: 20px;
-            background-color: rgb(105, 192, 105);
-            border-radius: 50%;
-}
-
-.task-incomplete-icon {
-            height: 20px;
-            width: 20px;
-            background-color: rgb(218, 218, 218);
-            border-radius: 50%;
-
-}
-
-.task-cancelled-icon {
-            height: 20px;
-            width: 20px;
-            background-color: rgb(225, 13, 13);
-            border-radius: 50%;
-
-}
-
-.delete-link{
-            text-decoration: none;
-            font-weight: 900;
-            color: #E52020;
-            font-size: 50px;
-            line-height: 0;
-}
-
-
-
-
-#add-link {
-            width: 100%;
-            text-align: left;
-            margin-right: 10px;
-            color: #1C1B1B;
-            text-decoration: none;
-            font-size: 16px;
-            text-shadow: 1px 1px #4B4C64;
-}
-input[type=text], input[type=password], textarea {
-            border: 1px solid #1C1B1B;
-            border-radius: 5px;
-            padding: 10px;
-            width: 100%;
-}
-
-label {
-            padding-top: 10px !important;
-            display: block;
-            width: 250px;
-}
-
-
-
-
-.card-body{
-            padding: 10px;
-}
-
-.title-form{
-             text-align: center;
-}
-
+ 
+ 
+ 
+ .delete-link{
+             text-decoration: none;
+             
+             color: #000000;
+             font-size: 30px;
+             
+ }
+ 
+ 
+ 
+ 
+ #add-link {
+             width: 100%;
+             text-align: left;
+             margin-left: 15px;
+             color: #1C1B1B;
+             text-decoration: none;
+             font-size: 35px;
+             text-shadow: 1px 1px #4B4C64;
+ }
+ input[type=text], input[type=password], textarea {
+             border: 1px solid #1C1B1B;
+             border-radius: 5px;
+             padding: 10px;
+             width: 100%;
+ }
+ 
+ label {
+             padding-top: 10px !important;
+             display: block;
+             width: 250px;
+ }
+ 
+ 
+ 
+ 
+ .card-body{
+             padding: 10px;
+ }
+ 
+ .title-form{
+              text-align: center;
+ }
+ 
+ 
