--- a/to_do/templates/to_do/base.html
+++ b/to_do/templates/to_do/base.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>To Do List</title>
+    <title>To - Do List</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +13,14 @@
 
 
 </head>
-<body>
+<body >
 <div class="container">
     {% block content %}
 
     {% endblock content %}
 </div>
+
+
+
 </body>
 </html>
