--- a/to_do/templates/to_do/task_confirm_delete.html
+++ b/to_do/templates/to_do/task_confirm_delete.html
@@ -2,15 +2,15 @@
 {% block content %}
 
 <div class="header-bar">
-    <a href="{% url 'tasks' %}">&#8592; Назад</a>
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
 </div>
 
 <div class="card-body">
 
 <form method="POST">
     {% csrf_token %}
-    <p>Вы точно хотите удалить эту задачу, "{{task}}" ? </p>
-    <input class="button" type="submit" value="Удалить"/>
+    <p>Are you sure you want to delete this task, "{{task}}" ? </p>
+    <input class="button" type="submit" value="Delete"/>
 </form>
 </div>
 {% endblock content %}
