--- a/to_do/templates/to_do/task_list.html
+++ b/to_do/templates/to_do/task_list.html
@@ -2,9 +2,9 @@
 {% extends 'to_do/base.html' %}
 {% block content %}
 
-<div class="header-bar" style="background: rgb(68, 68, 68);">
+<div class="header-bar">
     <div>
-        <h1>To-Do List</h1>
+        <h1>To - Do List &#9745;</h1>
         
         
     </div>
@@ -13,35 +13,33 @@
 </div>
 
 <div id="search-add-wrapper" class="search">
-<form method="GET" style="margin-top: 20px; display: flex;">
-    
-    
-</form>
-<a id="add-link" href="{% url 'task-create' %}" style="text-align: left; font-size: 35;">Add List</a>
+<form method="GET" style="margin-top: 20px; display: flex;"></form>
+<a id="add-link" href="{% url 'task-create' %}"> Add List &#10010; </a>
 </div>
 
+<br>
 
 <div class="task-items-wrapper">
     {% for task in tasks %}
     <div class="task-wrapper">
         {% if task.status == 'YES' %}
             <div class="task-title">
-                <div class="task-complete-icon"></div>
+                <div>&#10004;</div>
                 <i><s><a href="{% url 'task-edit' task.id %}">{{task}}</a></s></i>
             </div>
-            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#10008;</a>
             {% elif task.status == 'PL' %}
             <div class="task-title">
-                <div class="task-incomplete-icon"></div>
+                <div>&#10711;</div>
                 <a href="{% url 'task-edit' task.id %}">{{task}}</a>
             </div>
-            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#10008;</a>
         {% elif task.status == 'NOT' %}
             <div class="task-title">
-                <div class="task-cancelled-icon"></div>
+                <div>&#10006;</div>
                 <a href="{% url 'task-edit' task.id %}">{{task}}</a>
             </div>
-            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#10008;</a>
 
         {% endif %}
 
@@ -50,6 +48,7 @@
         <h3 style="margin-left: 15px;">Нет задач</h3>
         {% endfor %}
 </div>
+
 
 
 {% endblock content %}
